test/error/E13.1.chigfn
{
	"type": "function",
	"name": "helloworld",
	"description": "Prints Hello World",
	"data_inputs": [],
	"data_outputs": [],
	"exec_inputs": [""],
	"exec_outputs": [""],
	"nodes": {
		"05544e6a-5311-418a-9934-32c4c7c078df": {
			"type": "lang:if",
			"data": {},
			"location": [2, 2]
		}
	},
	"connections": "nope",
	"local_variables": {}
}
